--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li> <a href="#sobre"> Sobre Mim </a> </li>
             <li> <a href="#especialidades"> Especialidades </a> </li>
             <li> <a href="#trabalhos"> Trabalhos e Hobbies </a> </li>
-            <li> <a href="#"> Entre em Contato </a> </li>
+            <li> <a href="#contato"> Entre em Contato </a> </li>
         </ul>
     </nav>
 
@@ -205,7 +205,7 @@
         <!-- Contato -->
 
         <section id="contato">
-            <h2> Para me contratar</h2>
+            <h2> Para me contatar</h2>
             <p> esse são os meus canais para contato</p>
 
             <div>
