--- a/index.html
+++ b/index.html
@@ -228,6 +228,11 @@
                 <p><a href="https://www.instagram.com/ojotav21/" target="_blank">Instagram</a></p>
             </div>
 
+            <div>
+                <img src="img/linkedin.png" alt="Linkedin">
+                <p><a href="https://www.linkedin.com/in/jo%C3%A3o-victor-morais-a012691b2/" target="_blank">Linkedin</a></p>
+            </div>
+
         </section>
 
 
