--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
             <div>
                 <img src="img/o-email.png" alt="email">
-                <p><a href="mailto:email@contato.com">joaovictormorais2110@gmail.com </a></p>
+                <p><a href="mailto:joaovictormorais2103@gmail.com">joaovictormorais2103@gmail.com </a></p>
             </div>
 
             <div>
