--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
 
             <div class="texto">
                 <p>
-                    Meu nome é João Victor Morais, possuo 17 anos.
-                    Estou cursando o 2º ano do Ensino Médio Integrado ao Técnico Informática para Internet na Etec Profª Maria Cristina Medeiros.
-                    Resido em Ribeirão Pires. Estudo javascript, tiro algumas fotos, amante da poesia e literatura, e apaixonado por numero se matemático. Busco aprimorar meus conhecimentos em tecnologia e de meus componentes curriculares
-                    enfim, sou um cara bacana.
+                    Meu nome é João Victor Morais, possuo 17 anos. Estou cursando o 2º ano do Ensino Médio Integrado ao Técnico Informática para Internet na Etec Profª Maria Cristina Medeiros. Resido em Ribeirão Pires. Estudo javascript, tiro algumas fotos, amante da poesia e literatura, e apaixonado por números se matemático. Busco aprimorar meus conhecimentos em tecnologia e de meus componentes curriculares. Enfim, João Victor Morais!
                 </p>
             </div>
         </section>
@@ -87,9 +84,7 @@
             <div>
                 <img src="img/design.png" alt="">
                 <h3> Design e Fotografia</h3>
-                <p> Estudo conceito de Design, além de ler matérias e fazer alguns Trabalhos.
-                    Tenho conhecimentos na área de Artes, tendo feitos mais de 2 anos de curso de desenho
-                    sei conceitos sobre simetria e sombras, formas e anatomia. Desenhista por hobby.
+                <p> Estudo conceito de Design, além de ler matérias e fazer alguns Trabalhos. Tenho conhecimentos na área de Artes, tendo feitos mais de 2 anos de curso de desenho, sei conceitos sobre simetria e sombras, formas e anatomia. Desenhista por hobby.
                 </p>
                 
             </div>
@@ -97,9 +92,7 @@
             <div>
                 <img src="img/Sociologia-removebg-preview.png" alt="">
                 <h3> Filosofia e Sociologia </h3>
-                <p> Estudo filosofia e sociologia para buscar entender as pessoas ao meu redor,
-                    buscando uma perspectiva diferente das demais, penso sobre a vida e questões filosóficas,
-                    estudando sociologiapara buscar entender porquê as coisas são o que são.
+                <p> Estudo filosofia e sociologia para buscar entender as pessoas ao meu redor, buscando uma perspectiva diferente das demais, penso sobre a vida e questões filosóficas, estudando sociologia visando entender porquê as coisas são o que são.
                 </p>
                 
             </div>
@@ -128,8 +121,7 @@
 
         <div class="comp">
             <img src="img/autogestao.png" alt="">
-            <p> Sou determinado, organizado ao âmbito profissional, focado nas minhas tarefas e persisto sempre em busca da solução os problemas
-                encontrados em meio a realização de tarefas. Responsabilidade, visando sempre o crescimento profissional e organizacional.
+            <p>Sou determinado, organizado no âmbito profissional, focado nas minhas tarefas e persisto sempre em busca da solução os problemas encontrados em meio a realização de tarefas. Responsabilidade, visando sempre o crescimento profissional e organizacional.
             </p>
         </div>
 
