--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
 
         <div class="comp trab">
-            <a href="http://siteinterdisciplinar.atwebpages.com/" target="_blank"> <img src="img/inter.JPG" alt="" id="pedal">  </a>
+            <a href="https://ojotav21.github.io/interdiciplinar-bio-edfisica-ddw.github.io/" target="_blank"> <img src="img/inter.JPG" alt="" id="pedal">  </a>
             <p>Site Interdiciplinar de Biologia e Educação Física.</p>
         </div>
 
