--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <div class="texto">
                 <p>
-                    Meu nome é João Victor Morais, possuo 18 anos. Estou cursando o 3º ano do Ensino Médio Integrado ao Técnico Informática para Internet na Etec Profª Maria Cristina Medeiros. Resido em Ribeirão Pires. Estudo javascript, tiro algumas fotos, amante da poesia e literatura, e apaixonado por números se matemático. Busco aprimorar meus conhecimentos em tecnologia e de meus componentes curriculares. Enfim, João Victor Morais!
+                    Meu nome é João Victor Morais, possuo 18 anos. Estou cursando o 3º ano do Ensino Médio Integrado ao Técnico Informática para Internet na Etec Profª Maria Cristina Medeiros. Resido em Ribeirão Pires. Estudo javascript, tiro algumas fotos, amante da poesia e literatura. Apaixonado por números e matemática. Busco aprimorar meus conhecimentos em tecnologia e de meus componentes curriculares. Enfim, João Victor Morais!
                 </p>
             </div>
         </section>
