--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Portfolio - João Victor Morais</title>
+    <title>Portfólio - João Victor Morais</title>
 </head>
 
 <body>
