--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <div class="about__info">
                         <div>
                             <span class="about__info-title">08+</span>
-                            <span class="about__info-name">Anos <br> de experiência</span>
+                            <span class="about__info-name">Meses <br> de experiência</span>
                         </div>
 
                         <div>
