--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; João Victor Morais, inspirado em Bedimcode. All rights reserved.</p>
+            <p class="footer__copy">&#169; João Victor Morais, como base do Bedimcode. All rights reserved.</p>
         </div>
 
     </footer>
