--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     </div>
                     <div class="home__data">
                         <h1 class="home__title typewriter">Olá, eu sou o João!</h1>
-                        <h3 class="home__subtitle">Desenvolvedor Front-end</h3>
+                        <h3 class="home__subtitle">Desenvolvedor Full-Stack</h3>
                         <p class="home__description">Aspirante a Desenvolvedor Full-Stack</p>
                         <a href="#contact" class="button button--flex">
                             Contate-me<i class="uil uil-message button__icon"></i>
