--- a/index.html
+++ b/index.html
@@ -254,6 +254,16 @@
                             </div>
                         </div>
 
+                        <div class="skills__data">
+                            <div class="skills__titles">
+                                <h3 class="skills__name">Python</h3>
+                                <span class="skills__number">40%</span>
+                            </div>
+
+                            <div class="skills__bar">
+                                <span class="skills__percentage skills__py"></span>
+                            </div>
+                        </div>
 
                         <div class="skills__data">
                             <div class="skills__titles">
@@ -586,7 +596,7 @@
                 <div class="services__content">
                     <div>
                         <i class="uil uil-arrow services__icon"></i>
-                        <h3 class="services__title">Desenvolvedor<br> Front-end</h3>
+                        <h3 class="services__title">Desenvolvedor<br> Full-Stack</h3>
                     </div>
                     <span class="button button--flex button--small button--link services__button">
                         Veja mais
@@ -595,7 +605,7 @@
 
                     <div class="services__modal">
                         <div class="services__modal-content">
-                            <h4 class="services__modal-title">Desenvolvedor <br> Front-end</h4>
+                            <h4 class="services__modal-title">Desenvolvedor <br> Full-Stack</h4>
                             <i class="uil uil-times services__modal-close"></i>
 
                             <ul class="services__modal-services grid">
@@ -618,6 +628,17 @@
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>Otimização de sites</p>
                                 </li>
+
+                                 <li class="services__modal-service">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <p>Aplicações com Node</p>
+                                </li>
+
+                                 <li class="services__modal-service">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <p>Projetos em Python</p>
+                                </li>
+
                             </ul>
                         </div>
                     </div>
@@ -770,6 +791,21 @@
                         </div>
                     </div>
 
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/jupyter.png"alt="" class="portfolio__img">
+
+                        <div class="portfolio_">
+                            <h3 class="portfolio__title"> Python Jupyter</h3>
+                            <p class="portfolio__description"></p>
+                            <a href="https://github.com/ojotav21/python-jupyter" target="_blank"
+                                class="button button--flex button--small portfolio__button">
+                                Demonstração
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    
                     <!--==================== PORTFOLIO 6 ====================-->
 
                     <div class="portfolio__content grid swiper-slide">
