--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a href="assets/pdf/curriculum_vitae_joao_victor_morais.pdf" download type="application/pdf"
+                        <a href="assets/pdf/curriculum_vitae_João_Victor_Morais.pdf" download type="application/pdf"
                             target="_blank" class="button button--flex"> Fazer
                             Download do Currículo
                             <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
-                    <a href="assets/pdf/curriculum_vitae_joao_victor_morais.pdf" target="_blank"
+                    <a href="assets/pdf/curriculum_vitae_João_Victor_Morais.pdf" target="_blank"
                         class="section__subtitle nav__link espaco">ou veja online clicando aqui</a>
 
                 </div>
@@ -254,16 +254,6 @@
                             </div>
                         </div>
 
-                        <div class="skills__data">
-                            <div class="skills__titles">
-                                <h3 class="skills__name">Python</h3>
-                                <span class="skills__number">40%</span>
-                            </div>
-
-                            <div class="skills__bar">
-                                <span class="skills__percentage skills__py"></span>
-                            </div>
-                        </div>
 
                         <div class="skills__data">
                             <div class="skills__titles">
@@ -385,6 +375,36 @@
                         </div>
                     </div>
                 </div>
+
+                 <!-- Skills 3 -->
+                 <div class="skills__content skills__close">
+                    <div class="skills__header">
+
+                        <i class="uil uil-ellipsis-h skills__icon"></i>
+
+                        <div>
+                            <h1 class="skills__titles">Outros</h1>
+                            <span class="skills__subtitle">Há mais de 6 meses</span>
+                        </div>
+
+                        <i class="uil uil-angle-down skills__arrow"></i>
+                    </div>
+
+
+                    <div class="skills__list grid">
+                        <div class="skills__data">
+                            <div class="skills__titles">
+                                <h3 class="skills__name">Python</h3>
+                                <span class="skills__number">40%</span>
+                            </div>
+
+                            <div class="skills__bar">
+                                <span class="skills__percentage skills__py"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
