--- a/index.html
+++ b/index.html
@@ -491,11 +491,11 @@
                             </div>
 
                             <div>
-                                <h3 class="qualification__title">Lógica de programação essencial</h3>
-                                <span class="qualification__subtitle">Digital Innovation One Inc. - Cursos Online</span>
+                                <h3 class="qualification__title">Curso Superior de Tecnologia em Informática para Negócios</h3>
+                                <span class="qualification__subtitle">Fatec Mauá</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2020 - 2021
+                                    2022 - 2024
                                 </div>
                             </div>
 
