--- a/index.html
+++ b/index.html
@@ -166,9 +166,7 @@
             <div class="about__container container grid">
                 <img src="assets/img/sobre.jpg" alt="" class="about__img">
                 <div class="about__data">
-                    <p class="about_description"> Meu nome é João Victor Morais, possuo 18 anos. Estou cursando o 3º ano
-                        do Ensino Médio Integrado ao Técnico Informática para Internet na Etec Profª Maria Cristina
-                        Medeiros.
+                    <p class="about_description"> Meu nome é João Victor Morais, possuo 18 anos. Estou cursando o Tecnólogo de Informática para Negócios.
                         Resido em Ribeirão Pires.
                         Estudo javascript, tiro algumas fotos, amante da poesia e literatura.
                         Apaixonado por números e matemática.
