--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@
             <div class="footer__container container grid">
                 <div>
                     <h1 class="footer__title">João<br>Victor<br>Morais</h1>
-                    <span class="footer__subtitle">Desenvolvedor Front-end</span>
+                    <span class="footer__subtitle">Desenvolvedor Full-Stack</span>
                 </div>
 
                 <ul class="footer__links">
@@ -1043,7 +1043,7 @@
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; Bedimcode. All rights reserved.</p>
+            <p class="footer__copy">&#169; João Victor Morais & Bedimcode. All rights reserved.</p>
         </div>
 
     </footer>
