--- a/index.html
+++ b/index.html
@@ -489,11 +489,11 @@
                             </div>
 
                             <div>
-                                <h3 class="qualification__title">Curso Superior de Tecnologia em Informática para Negócios</h3>
-                                <span class="qualification__subtitle">Fatec Mauá</span>
+                                <h3 class="qualification__title">Bacharelado em Ciência e Tecnologia (BC&T)</h3>
+                                <span class="qualification__subtitle">Universidade Federal do ABC</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2022 - 2024
+                                    2022 - 2032
                                 </div>
                             </div>
 
